--- a/PS6_DAL/pom.xml
+++ b/PS6_DAL/pom.xml
@@ -26,6 +26,8 @@
 
 	</properties>
 	
+	 
+        
 	<dependencies>
 		<!-- Spring and Transactions -->
 		<dependency>
@@ -74,7 +76,19 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
+        </dependency>
 
 
 	</dependencies>	
+	<repositories>
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
 </project>
